fixes for terrain saving/loading, config commands